--- a/main.html
+++ b/main.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model Demo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Box Model Test</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="outer-box">
-        <div class="inner-box">
-            <p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
-        </div>
+    <div id="box"> 
+        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
     </div>
 </body>
 </html>
