--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box"> 
+    <div > 
         This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
     </div>
 </body>
