--- a/main.html
+++ b/main.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model Test</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div > 
-        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+        This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
     </div>
 </body>
 </html>
