--- a/main.html
+++ b/main.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Box Model Demo</title>
 </head>
+
 <body>
-    <div> 
-        This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
-    </div>
+    <div class="box-model">This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
